--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
-.App {
+.navbar {
+  width: 100%;
+  margin: 0 !important;
+  background-color: rgb(179, 88, 54);
+}
+.img-logo {
+  display: block;
+  margin: 0 auto;
+  background: transparent;
+  mix-blend-mode: darken;
+  width: 100px !important;
+  height: 100px;
+}
+.search input {
+  all: unset;
+  background-color: #fff;
+  padding: 10px;
+  width: 95%;
+  border-radius: 0 15px 15px 0;
+}
+.search i {
+  background-color: #fff;
+  padding: 14px;
+  border-radius: 15px 0 0 15px;
+}
+.card-movie {
+  position: relative;
+  margin: 0 auto;
+  height: 300px;
+  overflow: hidden;
+  cursor: pointer;
+}
+.card-movie img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+.card-movie .card-overlay {
+  position: absolute;
+  z-index: 99;
+  background-color: #2c2c2ca4;
+  opacity: 0;
+  height: 100% !important;
+
+  transition: all 0.5s ease;
+}
+.card-movie .card-overlay p {
+  font-size: 14px;
+  color: #eee;
+}
+.card-movie:hover .card-overlay {
+  opacity: 1;
+}
+.movieName {
   text-align: center;
+  font-weight: bold;
+  font-size: 16px !important;
+  width: 100%;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.big-img {
+  overflow: hidden;
+  border-radius: 15px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.big-img img {
+  width: 100%;
+  height: 100%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.movie .item {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 25px !important;
+  font-weight: bold !important;
+  color: #333;
 }
-
-.App-link {
-  color: #61dafb;
+.movie .item div {
+  width: 50% !important;
+  text-align: right;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.movie .item .title {
+  text-align: right;
+  font-size: 16px !important;
+}
+.btn-view {
+  background-color: rgb(179, 88, 54) !important;
+  color: white !important;
+  font-weight: bold !important;
 }
